# royaltracker

./: .gitignore  Cargo.toml  DEV.md  README.md  config.example.toml  flake.nix
.github/workflows/: image.yml
bins/cruise-bot/: Cargo.toml
bins/cruise-bot/src/: main.rs
bins/cruise-scraper/: Cargo.toml
bins/cruise-scraper/src/: main.rs
bins/royaltracker-bot/: Cargo.toml
bins/royaltracker-bot/src/: main.rs
bins/royaltracker-scraper/: Cargo.toml
bins/royaltracker-scraper/src/: main.rs
charts/royaltracker/: Chart.yaml  values.yaml
charts/royaltracker/templates/: _helpers.tpl  certificate.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  service.yaml
crates/cruise-api/: Cargo.toml
crates/cruise-api/src/: client.rs  graphql.rs  lib.rs
crates/cruise-config/: Cargo.toml
crates/cruise-config/src/: lib.rs
crates/cruise-core/: Cargo.toml
crates/cruise-core/src/: bookings.rs  catalog.rs  diff.rs  jitter.rs  scrape.rs
crates/cruise-crypto/: Cargo.toml
crates/cruise-crypto/examples/: gen-key.rs
crates/cruise-crypto/src/: lib.rs
crates/cruise-storage/: Cargo.toml
crates/cruise-storage/src/: lib.rs  postgres.rs  repo.rs  sqlite.rs
crates/cruise-telegram/: Cargo.toml
crates/cruise-telegram/examples/: test-alert.rs
crates/cruise-telegram/src/: lib.rs
crates/cruise-types/: Cargo.toml
crates/cruise-web/: Cargo.toml
crates/cruise-web/src/: auth.rs  handlers.rs  lib.rs  state.rs  static_assets.rs
crates/cruise-web/static/: app.js
crates/royaltracker-api/: Cargo.toml
crates/royaltracker-api/src/: auth.rs  catalog.rs  client.rs  error.rs
crates/royaltracker-api/tests/: login_smoke.rs
crates/royaltracker-config/: Cargo.toml
crates/royaltracker-config/src/: lib.rs
crates/royaltracker-core/: Cargo.toml
crates/royaltracker-core/src/: bookings.rs  catalog.rs  diff.rs  lib.rs  scrape.rs
crates/royaltracker-crypto/: Cargo.toml
crates/royaltracker-crypto/examples/: gen-key.rs
crates/royaltracker-storage/: Cargo.toml
crates/royaltracker-storage/src/: lib.rs  postgres.rs  repo.rs  sqlite.rs
crates/royaltracker-telegram/: Cargo.toml
crates/royaltracker-telegram/examples/: test-alert.rs
crates/royaltracker-telegram/src/: lib.rs
crates/royaltracker-types/: Cargo.toml
crates/royaltracker-types/src/: lib.rs
crates/royaltracker-web/: Cargo.toml
crates/royaltracker-web/src/: auth.rs  handlers.rs  lib.rs  state.rs
crates/royaltracker-web/static/: app.js  index.html
migrations/postgres/: 0001_init.sql  0002_users.sql  0003_catalog_cache.sql  0005_catalog_formatted.sql  0006_shared_bookings_and_alerts.sql  0007_dedup_watches_by_product.sql
migrations/sqlite/: 0001_init.sql  0002_users.sql  0003_catalog_cache.sql  0004_booking_nights.sql  0006_shared_bookings_and_alerts.sql  0007_dedup_watches_by_product.sql
