[workspace]
resolver = "2"
members = [
    "crates/cruise-types",
    "crates/cruise-api",
    "crates/cruise-storage",
    "crates/cruise-config",
    "crates/cruise-telegram",
    "crates/cruise-core",
    "crates/cruise-crypto",
    "crates/cruise-web",
    "bins/cruise-bot",
    "bins/cruise-scraper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
publish = false

[workspace.dependencies]
cruise-types     = { path = "crates/cruise-types" }
cruise-api       = { path = "crates/cruise-api" }
cruise-storage   = { path = "crates/cruise-storage", default-features = false }
cruise-config    = { path = "crates/cruise-config" }
cruise-telegram  = { path = "crates/cruise-telegram" }
cruise-core      = { path = "crates/cruise-core" }
cruise-crypto    = { path = "crates/cruise-crypto" }
cruise-web       = { path = "crates/cruise-web", default-features = false }

tokio       = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
sqlx        = { version = "0.8", default-features = false }
wreq        = { version = "6.0.0-rc.28", features = ["json", "form", "cookies", "gzip", "brotli", "deflate"] }
wreq-util   = "3.0.0-rc.10"
teloxide    = { version = "0.17", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono      = { version = "0.4", default-features = false, features = ["serde", "clock"] }
figment     = { version = "0.10", features = ["env", "toml"] }
rand        = "0.8"
async-trait = "0.1"
url         = "2"
axum        = { version = "0.7", features = ["macros"] }
tower       = "0.5"
tower-http  = { version = "0.6", features = ["trace", "compression-gzip", "cors"] }
hmac        = "0.12"
sha2        = "0.10"
hex         = "0.4"
rust-embed  = { version = "8", features = ["debug-embed"] }
mime_guess  = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
