[package]
name = "cruise-scraper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["postgres"]
sqlite   = ["cruise-storage/sqlite"]
postgres = ["cruise-storage/postgres"]

[[bin]]
name = "cruise-scraper"
path = "src/main.rs"

[dependencies]
cruise-api      = { workspace = true }
cruise-config   = { workspace = true }
cruise-core     = { workspace = true }
cruise-crypto   = { workspace = true }
cruise-storage  = { workspace = true, default-features = false }
cruise-telegram = { workspace = true }
cruise-types    = { workspace = true }

tokio              = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
chrono             = { workspace = true }
