[package]
name = "cruise-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cruise-types = { workspace = true }
figment      = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
