[package]
name = "cruise-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cruise-types    = { workspace = true }
cruise-api      = { workspace = true }
cruise-storage  = { workspace = true }
cruise-telegram = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
chrono          = { workspace = true }
rand            = { workspace = true }
thiserror       = { workspace = true }
async-trait     = { workspace = true }
anyhow          = { workspace = true }
