[package]
name = "cruise-telegram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cruise-types = { workspace = true }
teloxide     = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio  = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml   = "0.8"
