[package]
name = "cruise-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
