[package]
name = "cruise-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
sqlite   = ["cruise-storage/sqlite"]
postgres = ["cruise-storage/postgres"]

[dependencies]
cruise-api      = { workspace = true }
cruise-core     = { workspace = true }
cruise-crypto   = { workspace = true }
cruise-storage  = { workspace = true, default-features = false }
cruise-types    = { workspace = true }

axum            = { workspace = true }
tower           = { workspace = true }
tower-http      = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
hmac            = { workspace = true }
sha2            = { workspace = true }
hex             = { workspace = true }
chrono          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
url             = { workspace = true }
rust-embed      = { workspace = true }
mime_guess      = { workspace = true }
async-trait     = { workspace = true }
