[package]
name = "royaltracker-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
royaltracker-types = { workspace = true }
wreq         = { workspace = true }
wreq-util    = { workspace = true }
tokio        = { workspace = true, features = ["sync"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
url          = { workspace = true }
base64       = "0.22"

[dev-dependencies]
tokio        = { workspace = true, features = ["macros", "rt-multi-thread"] }
