[package]
name = "royaltracker-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
royaltracker-types = { workspace = true }
figment      = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
