[package]
name = "royaltracker-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
royaltracker-types    = { workspace = true }
royaltracker-api      = { workspace = true }
royaltracker-storage  = { workspace = true }
royaltracker-telegram = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
chrono          = { workspace = true }
rand            = { workspace = true }
thiserror       = { workspace = true }
async-trait     = { workspace = true }
anyhow          = { workspace = true }

[dev-dependencies]
serde_json      = { workspace = true }
