[package]
name = "royaltracker-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand             = { workspace = true }
base64           = "0.22"
thiserror        = { workspace = true }
zeroize          = "1"
